syntax = "proto3";

option java_package = "com.microservice.grpc";
option java_multiple_files = true;


service InventoryService{
  rpc CheckQuantity(CheckQuantityRequest) returns(CheckQuantityResponse){}
}

message CheckQuantityResponse{
  bool isAvailable=1;
  string productId=2;
}
message CheckQuantityRequest{
  string productId=1;
  int64 quantity=2;
}
